# RiftEngine

./: .gitmodules  CMakeLists.txt  UpdateModules.bat
cmake/: RiftBundleFolder.cmake  RiftIdentifyModules.cmake  RiftJsonToList.cmake  RiftResolveModuleLibs.cmake
src/: EngineMain.cpp
